[gd_scene load_steps=2 format=3 uid="uid://ddgwq80f46rxo"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/Audio_menu.gd" id="1_xy3hy"]

[node name="AudioMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xy3hy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -38.5
offset_right = 153.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "Music"

[node name="Sound FX" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
text = "Sound FX"

[node name="Sliders" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="HBoxContainer/Sliders"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../BackFromAudio")

[node name="Music" type="HSlider" parent="HBoxContainer/Sliders"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="HBoxContainer/Sliders"]
layout_mode = 2

[node name="BackFromAudio" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_bottom = NodePath("../HBoxContainer/Sliders/Master")
text = "Back"

[connection signal="value_changed" from="HBoxContainer/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Sliders/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="BackFromAudio" to="." method="_on_back_from_audio_pressed"]
